--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header .navbar-white {
 	background-image:url(../images/homeimg.jpg);
 	background-repeat:no-repeat;
 	background-position:0% top;
-	background-size:100% 100%;
+	background-size:cover;
 	background-attachment:scroll;
 	background-color:rgba(0,0,0,0);
 }
